Portfolio ex added jumbotron

--- a/css/variables.css
+++ b/css/variables.css
@@ -8,7 +8,10 @@
     --purple: #6a00b2;
     --brown: #8c7a51;
     --grey: #53565A;
+    --lightgrey: #b7b2b2;
     --black: #272727;
+
+    --mainFont: 'Oswald', san-serif;
 }
 
 
