--- a/css/project.css
+++ b/css/project.css
@@ -10,19 +10,19 @@ h5 {
   padding-top: 60px;
 }
 
-#project1 img {
+#project1 {
   background-image: url("../assets/TutorialWebsite.jpg");
   padding-left: 300px;
 }
 
 
-#project2 img {
+#project2 {
   background-image: url("../assets/Creature.jpg");
   padding-left: 600px;
   margin-top: -200px;
 }
 
-#project3 img {
+#project3 {
   background-image: url("../assets/Temperature.jpg");
   padding-left: 900px;
   margin-top: -200px;
@@ -62,6 +62,7 @@ h5 {
 
 /* Style the front side (fallback if image is missing) */
 .flip-card-front {
+  
   background-color: #bbb;
   color: black;
 }
