--- a/css/footer.css
+++ b/css/footer.css
@@ -1,6 +1,6 @@
 footer {
-    font-family: 'Staatliches', cursive;
-    background-color: rgb(145, 143, 143);
+    font-family: 'Rajdhani', sans-serif;
+    background-color: black;
     color: white;
     float: left;
     width: 100%;
