--- a/css/about.css
+++ b/css/about.css
@@ -1,18 +1,21 @@
-#aboutme {
+.aboutme {
+    background-color: rgb(170, 170, 170);
     text-align: center;
-    color: rgb(2, 2, 2);
-    border: solid 1px lightgrey;
-    background-color: rgb(221, 217, 217);
-    padding-top: 150px;
-    padding-bottom: 200px;
+    color: white;
     width: 100%;
+    height: 100%;
 }
 
 h2 {
+    font-family: 'VT323', monospace;
     font-size: 50px;
 }
 
 p {
-    font-family: 'ZCOOL QingKe HuangYou', cursive;
+    font-family: 'Rajdhani', sans-serif;
     font-size: 30px;
+    text-align: center;
+    margin-top: 50px;
+    margin-bottom: 100px;
+    overflow: auto;
 }
