--- a/css/body.css
+++ b/css/body.css
@@ -1,61 +1,43 @@
-body {
-    background-color: var(--lightgrey);
-}
 
 span {
     padding: 3px;
 }
 
-.border {
-    background-color: rgb(73, 171, 204);
-    padding-bottom: 200px;
-}
 
-.image-container {
-    background-image: url("../assets/mountain2.jpg");
+/****  First Image ****/
+.design {
+    background: url("../assets/architecture.jpg") no-repeat center;
     background-size: cover;
     background-attachment: fixed;
-    position: center;
-    height: 900px;
+    height: 800px;
   }
 
 
-
-.text {
-    background-color: white;
-    color: black;
-    font-size: 5vw; 
-    font-weight: bold;
-    margin: 0 auto;
-    padding: 10px;
-    width:40%;
+h1 {
+    font-family: 'VT323', monospace;
     text-align: center;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    mix-blend-mode: screen;
-    animation: fadein 3s;
-}
+    color: white;
+    padding-top: 300px;
+    font-size: 75px;
+
+  }
 
 h3 {
-    text-align: center;
     font-family: 'Staatliches', cursive;
     color: white;
-    padding-top: 410px;
+    text-align: center;
 }
 
-#image-container {
-    background-image: url("../assets/fog-1535201_1920.jpg");
-    border: solid 1px lightgray;
+/***** Second Image ****/
+.abstract {
+    background: url("../assets/polygon.jpg") no-repeat center;
     background-size: cover;
     background-attachment: fixed;
-    position: center;
-    height: 400px;
+    height: 600px;
 }
 
-h2 {
+/* h2 {
     text-align: center;
     border: solid 1px lightgray;
     border-bottom: 10em;
-}
+} */
