--- a/css/project.css
+++ b/css/project.css
@@ -1,73 +1,85 @@
-
-h1 {
-  padding-top: 20px;
-  font-size: 50px;
+ .container {
+  background-color: rgb(170, 170, 170);
+  max-width: 100%;
+ }
+ 
+ 
+ .container h2{
+  font-family: 'VT323', monospace;
+  color: rgb(252, 249, 249);
   text-align: center;
-  color: #000;
-}
-
-h5 {
-  padding-top: 60px;
-}
-
-#project1 {
-  padding-left: 300px;
+  margin-bottom: 50px;
 }
 
 
-#project2 {
-  padding-left: 600px;
-  margin-top: -200px;
+.col{
+  margin-top: 50px;
+  margin-right: 2px;
+  text-align: center;
+  display: block;
+  width: 100vw;
+  overflow: hidden;
 }
 
-#project3 {
-  padding-left: 900px;
-  margin-top: -200px;
-}
 
-
-.flip-card {
-  background-color: transparent;
-  width: 200px;
-  height: 200px;
-  border: 2px solid #080808;
-  perspective: 1000px; /* Remove this if you don't want the 3D effect */
-}
-
-/* This container is needed to position the front and back side */
-.flip-card-inner {
+.project1 {
+  background: url("../assets/Boo.jpg") no-repeat cover;
+  border: solid 3px white;
   position: relative;
-  width: 100%;
+  margin-top: 10px;
+  margin-bottom: 75px;
+  margin-left: 25px;
+  width: 80%;
+  height: 300px;
+}
+
+.project1 img {
   height: 100%;
-  text-align: center;
-  transition: transform 0.8s;
-  transform-style: preserve-3d;
-}
-
-/* Do an horizontal flip when you move the mouse over the flip box container */
-.flip-card:hover .flip-card-inner {
-  transform: rotateY(180deg);
-}
-
-/* Position the front and back side */
-.flip-card-front, .flip-card-back {
-  position: absolute;
   width: 100%;
+}
+
+.project1:hover a {
+  opacity: .5;
+}
+
+
+.project2 {
+  background: url("../assets/JSTutorial.jpg") no-repeat cover;
+  border: solid 3px white;
+  position: relative;
+  margin-top: 10px;
+  margin-bottom: 75px;
+  margin-left: 25px;
+  width: 80%;
+  height: 300px;
+}
+
+.project2 img {
   height: 100%;
-  backface-visibility: hidden;
+  width: 100%;
 }
 
-/* Style the front side (fallback if image is missing) */
-.flip-card-front {
-  
-  background-color: #bbb;
-  color: black;
+
+.project2:hover a {
+  opacity: .5;
 }
 
-/* Style the back side */
-.flip-card-back {
-  background-color: rgb(248, 249, 250);
-  color: white;
-  transform: rotateY(180deg);
-  opacity: 0.5;
+.project3 {
+  background: url("../assets/spacexapi.jpg") no-repeat cover;
+  border: solid 3px white;
+  position: relative;
+  margin-top: 10px;
+  margin-bottom: 75px;
+  margin-left: 25px;
+  height: 300px;
+  width: 80%;
+}
+
+.project3 img {
+  height: 100%;
+  width: 100%;
+}
+
+.project3:hover a {
+  opacity: .5;
 }
