--- a/css/project.css
+++ b/css/project.css
@@ -1,39 +1,41 @@
  .container {
   background-color: rgb(170, 170, 170);
   max-width: 100%;
+  padding-bottom: 10em;
  }
  
  
- .container h2{
+ #projects h2{
   font-family: 'VT323', monospace;
   color: rgb(252, 249, 249);
   text-align: center;
   margin-bottom: 50px;
 }
 
-
-.col{
-  margin-top: 50px;
-  margin-right: 2px;
-  text-align: center;
-  display: block;
-  width: 100vw;
-  overflow: hidden;
+.row {
+  display: inline-flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  margin: auto;
+  
 }
 
 
+
+
+
 .project1 {
-  background: url("../assets/Boo.jpg") no-repeat cover;
+  background: url("../assets/hikingapp.jpg") no-repeat cover;
   border: solid 3px white;
+  border-radius: 50%;
   position: relative;
-  margin-top: 10px;
-  margin-bottom: 75px;
-  margin-left: 25px;
-  width: 80%;
+  margin: 0 0 8em 1em;
+  width: 300px;
   height: 300px;
 }
 
 .project1 img {
+  border-radius: 50%;
   height: 100%;
   width: 100%;
 }
@@ -43,18 +45,27 @@
 }
 
 
+
+
+
+
+
+
+
+
+
 .project2 {
   background: url("../assets/JSTutorial.jpg") no-repeat cover;
   border: solid 3px white;
+  border-radius: 50%;
   position: relative;
-  margin-top: 10px;
-  margin-bottom: 75px;
-  margin-left: 25px;
-  width: 80%;
+  margin: 0 0 8em 1em;
+  width: 300px;
   height: 300px;
 }
 
 .project2 img {
+  border-radius: 50%;
   height: 100%;
   width: 100%;
 }
@@ -64,18 +75,27 @@
   opacity: .5;
 }
 
+
+
+
+
+
+
+
+
+
 .project3 {
   background: url("../assets/spacexapi.jpg") no-repeat cover;
   border: solid 3px white;
+  border-radius: 50%;
   position: relative;
-  margin-top: 10px;
-  margin-bottom: 75px;
-  margin-left: 25px;
+  margin: 0 0 8em 1em;
+  width: 300px;
   height: 300px;
-  width: 80%;
 }
 
 .project3 img {
+  border-radius: 50%;
   height: 100%;
   width: 100%;
 }
