--- a/css/project.css
+++ b/css/project.css
@@ -5,11 +5,11 @@
  }
  
  
- #projects h2{
+ #projects, h2 {
   font-family: 'VT323', monospace;
   color: rgb(252, 249, 249);
   text-align: center;
-  margin-bottom: 50px;
+  margin-bottom: 1em;
 }
 
 .row {
@@ -18,6 +18,18 @@
   flex-wrap: wrap;
   margin: auto;
   
+}
+
+
+
+@media only screen and (min-width: 410px) {
+  .row {
+    display: inline-flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin: 0 0 0 22px;
+    
+  }
 }
 
 
