--- a/css/project.css
+++ b/css/project.css
@@ -115,3 +115,25 @@
 .project3:hover a {
   opacity: .5;
 }
+
+
+
+.project4 {
+  background: url("../assets/movieSearch.jpg") no-repeat cover;
+  border: solid 3px white;
+  border-radius: 50%;
+  position: relative;
+  margin: 0 0 8em 1em;
+  width: 300px;
+  height: 300px;
+}
+
+.project4 img {
+  border-radius: 50%;
+  height: 100%;
+  width: 100%;
+}
+
+.project4:hover a {
+  opacity: .5;
+}
