--- a/css/project.css
+++ b/css/project.css
@@ -1,7 +1,7 @@
  .container {
   background-color: rgb(170, 170, 170);
   max-width: 100%;
-  padding-bottom: 10em;
+  padding-bottom: 1em;
  }
  
  
@@ -39,15 +39,15 @@
 .project1 {
   background: url("../assets/hikingapp.jpg") no-repeat cover;
   border: solid 3px white;
-  border-radius: 50%;
+  border-radius: 10px;
   position: relative;
-  margin: 0 0 8em 1em;
+  margin: 0 0 3em 1em;
   width: 300px;
   height: 300px;
 }
 
 .project1 img {
-  border-radius: 50%;
+  border-radius: 10px;
   height: 100%;
   width: 100%;
 }
@@ -69,15 +69,15 @@
 .project2 {
   background: url("../assets/JSTutorial.jpg") no-repeat cover;
   border: solid 3px white;
-  border-radius: 50%;
+  border-radius: 10px;
   position: relative;
-  margin: 0 0 8em 1em;
+  margin: 0 0 3em 1em;
   width: 300px;
   height: 300px;
 }
 
 .project2 img {
-  border-radius: 50%;
+  border-radius: 10px;
   height: 100%;
   width: 100%;
 }
@@ -99,15 +99,15 @@
 .project3 {
   background: url("../assets/spacexapi.jpg") no-repeat cover;
   border: solid 3px white;
-  border-radius: 50%;
+  border-radius: 10px;
   position: relative;
-  margin: 0 0 8em 1em;
+  margin: 0 0 3em 1em;
   width: 300px;
   height: 300px;
 }
 
 .project3 img {
-  border-radius: 50%;
+  border-radius: 10px;
   height: 100%;
   width: 100%;
 }
@@ -121,19 +121,40 @@
 .project4 {
   background: url("../assets/movieSearch.jpg") no-repeat cover;
   border: solid 3px white;
-  border-radius: 50%;
+  border-radius: 10px;
   position: relative;
-  margin: 0 0 8em 1em;
+  margin: 0 0 3em 1em;
   width: 300px;
   height: 300px;
 }
 
 .project4 img {
-  border-radius: 50%;
+  border-radius: 10px;
   height: 100%;
   width: 100%;
 }
 
 .project4:hover a {
+  opacity: .5;
+}
+
+
+.project5 {
+  background: url("../assets/StoreFront.jpg") no-repeat cover;
+  border: solid 3px white;
+  border-radius: 10px;
+  position: relative;
+  margin: 0 0 3em 1em;
+  width: 300px;
+  height: 300px;
+}
+
+.project5 img {
+  border-radius: 10px;
+  height: 100%;
+  width: 100%;
+}
+
+.project5:hover a {
   opacity: .5;
 }
